<resources>
    <string name="app_name">VeganRecipesApp</string>
    <string name="screen_recipes">My Recipes</string>
    <string name="screen_detail">Recipe Detail</string>
    <string name="add_recipe">+ Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_recipes">No recipes yet. Add one!</string>
    <string name="choose_recipe_type">What type of recipe?</string>
    <string name="list_view">List View</string>
    <string name="table_view">Table View</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_ingredient_btn">+ Add to list</string>
    <string name="remove_ingredient">Remove ingredient</string>
    <string name="hint_title">Recipe title *</string>
    <string name="hint_description">Description</string>
    <string name="hint_servings">Servings</string>
    <string name="hint_prep_time">Prep time (min)</string>
    <string name="hint_ingredient_name">Ingredient name *</string>
    <string name="hint_quantity">Qty *</string>
    <string name="hint_unit">Unit</string>
    <string name="title_required">Please enter a recipe title</string>
    <string name="ingredient_name_required">Ingredient name and quantity are required</string>
    <string name="type_label">Type: </string>
</resources>